--- a/public/screen.css
+++ b/public/screen.css
@@ -1,12 +1,124 @@
-:root {
-  font: 16px / 1 sans-serif;
-}
+@import url('https://fonts.googleapis.com/css?family=Asap:400,500,700&display=swap');
 
-html {
-  height: 100%;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  min-height: 100%;
+  background: #24272e;
+}
+
+
+header {
+  background: white;
+  padding: 20px;
+
+}
+
+header>h1 {
+  color: #24272E;
+  text-align: center;
+  font-family: Asap, sans-serif;
+}
+
+.score-board {
+  margin: 20px auto;
+  border: 3px solid white;
+  border-radius: 4px;
+  text-align: center;
+  width: 200px;
+  color: white;
+  font-size: 46px;
+  padding: 15px 30px;
+  font-family: Asap, sans-serif;
+  position: relative;
+}
+
+.badge {
+  background: #e2584d;
+  color: white;
+  font-size: 18px;
+  padding: 2px, 10px;
+  font-family: Asap, sans-serif;
+}
+
+#user_label {
+  position: absolute;
+  top: 30px;
+  left: -25px;
+}
+
+#computer_label {
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.result {
+  font-size: 40px;
+  color: white;
+  font-family: Asap, sans-serif;
+  position: center;
+  font-weight: bold;
+}
+
+.result {
+  text-align: center;
+  font-weight: bold;
+  font-family: Asap, sans-serif;
+}
+
+.choices {
+  margin: 50px 0;
+  text-align: center;
+
+
+}
+
+#bio {
+  font-family: Asap, sans-serif;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  color: white;
+}
+
+.choice {
+  border: 4px solid white;
+  border-radius: 50%;
+  padding: 10px;
+  margin: 0 20px;
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+
+.choice:hover {
+  cursor: pointer;
+  background: #24272E;
+}
+
+#action_message {
+  text-align: center;
+  color: white;
+  font-family: Asap, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.green-glow {
+  border: 4px solid #4dcc7d;
+  box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
 }
